[gd_scene load_steps=14 format=3 uid="uid://crthfjmprjleu"]

[ext_resource type="Script" uid="uid://c8rt54m0kr016" path="res://scripts/puzzle/constellation.gd" id="1_wckjp"]
[ext_resource type="AudioStream" uid="uid://drl5sc84lki7k" path="res://audio/placeholders set 1/minigame_chime1_v1.mp3" id="2_v47gq"]
[ext_resource type="AnimationLibrary" uid="uid://cq2l26cystw3n" path="res://scripts/puzzle/constellation.res" id="2_wckjp"]
[ext_resource type="AudioStream" uid="uid://dp7sgavlouj2g" path="res://audio/placeholders set 1/minigame_loop_v1.mp3" id="3_645h7"]
[ext_resource type="AudioStream" uid="uid://bkeqat34n8isj" path="res://audio/placeholders set 1/minigame_chime2_v1.mp3" id="3_ltsop"]
[ext_resource type="AudioStream" uid="uid://b3e1hjfdvu1ob" path="res://audio/placeholders set 1/minigame_chime3_v1.mp3" id="4_bx3vj"]
[ext_resource type="AudioStream" uid="uid://b5gh6xmp1lumi" path="res://audio/placeholders set 1/minigame_chime4_v1.mp3" id="5_m75ut"]
[ext_resource type="AudioStream" uid="uid://ciajbckao5mo0" path="res://audio/placeholders set 1/minigame_chime5_v1.mp3" id="6_d4swh"]
[ext_resource type="Script" uid="uid://cemvkwfanduka" path="res://scripts/utils/audio_playlist_player.gd" id="9_ltsop"]

[sub_resource type="Gradient" id="Gradient_645h7"]
offsets = PackedFloat32Array(0.132075, 0.232704, 0.396226, 0.528302, 0.622642, 0.735849, 0.90566, 1)
colors = PackedColorArray(0.470588, 0.839216, 0.964706, 1, 0.305882, 0.690196, 0.870588, 1, 0.181647, 0.560314, 0.780235, 1, 0.0470588, 0.419608, 0.682353, 1, 0.027451, 0.362567, 0.64492, 1, 0.00392157, 0.294118, 0.6, 1, 0.00784314, 0.196078, 0.505882, 1, 0.0588235, 0.0941176, 0.407843, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hny7o"]

[sub_resource type="Animation" id="Animation_hny7o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Stars:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Stars:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hny7o"]
_data = {
&"RESET": SubResource("Animation_hny7o")
}

[node name="ConstellationGame" type="Node2D"]
script = ExtResource("1_wckjp")
line_color = Color(0.745098, 0.898039, 1, 1)
glow_gradient = SubResource("Gradient_645h7")
chimes = Array[AudioStream]([ExtResource("2_v47gq"), ExtResource("3_ltsop"), ExtResource("4_bx3vj"), ExtResource("5_m75ut"), ExtResource("6_d4swh")])

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Background" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
z_index = 1
centered = false

[node name="Stars" type="Node2D" parent="Sprites"]
unique_name_in_owner = true
z_index = 2

[node name="Lines" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 1

[node name="MouseLine" type="Line2D" parent="."]
unique_name_in_owner = true
z_index = 1
material = SubResource("ShaderMaterial_hny7o")
points = PackedVector2Array(0, 0, 0, 0)
width = 4.0
default_color = Color(0.470588, 0.839216, 0.964706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hny7o"),
&"constellation": ExtResource("2_wckjp")
}
autoplay = "enter"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_645h7")
volume_db = 21.649
autoplay = true
parameters/looping = true

[node name="Melody" type="AudioStreamPlayer" parent="."]
volume_db = 21.649
script = ExtResource("9_ltsop")
metadata/_custom_type_script = "uid://cemvkwfanduka"

[connection signal="connected_all" from="." to="." method="_on_connected_all"]
